# challenger-workflows

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  getChallengerIndexSpecies.py  getEnvironmentInfo.py  getSpeciesInfo.py  getSpeciesInfoNoOffset.py  getSpeciesInfoWithOffset.py  main.py  mypy.ini  parse.sh  pyproject.toml
.github/: update_stations.yml
.github/workflows/: lint.yml  update_stations.yml
clowder/: docker-compose.yaml
data/: README.md  process.py  requirements.txt
parser/: Dockerfile  README.md  cleanup.py  main.py  parse.sh  run.sh
pipeline/: main.py  models.py  parsers.py  update_stations.py
scripts/: format.sh  lint.sh
workflows/: create_test_data.py  demo.py  get_all_species.py  get_data_col.py  get_data_irmng.py  get_species_status.py  get_status.py  gnames.py  plymouth.py  process_stations.py  process_summary_report_species_index.py  remove_invalid_species.py  update_data_sources.py  update_datasources.py  update_stations.py  utils.py
