[tool.poetry]
name = "challenger-workflows"
version = "0.1.0"
description = ""
repository = "https://github.com/Oceans-1876/challenger-workflows"
authors = ["Kaveh Karimi-Asli <kaveh@illinois.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
fuzzysearch = "~0.7"
geopandas = "~0.12"
jupyter = "~1.0"
matplotlib = "~3.6"
notebook = "~6.5"
opencv-python = "~4.6"
openpyxl = "~3.0"
pandas = "~1.5"
pydantic = "~1.10"
pytesseract = "~0.3"
requests = "~2.28"

[tool.poetry.dev-dependencies]
autoflake = "~1.7"
black = "~22.10"
flake8 = "~5.0"
ipython = "~8.6"
isort = "~5.10"
mypy = "~0.982"
pre-commit = "~2.20"
types-requests = "~2.28"

[tool.isort]
profile = "black"
multi_line_output = 3
